src/globals.css
@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rajdhani:wght@300;400;500;600;700&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

body, html {
  overflow-x: hidden;
}

body {
  font-family: 'Nunito Sans', sans-serif;
  background-color: #020b1c  ;
  padding:0;
  margin:0;
  box-sizing: border-box;
}

.logo-slider-container {
  width: 100%;
}

@keyframes infinite-scroll {
  from { transform: translateX(0); }
  to { transform: translateX(-100%); }
}

.animate-infinite-scroll {
  animation: infinite-scroll 25s linear infinite;
}

